# easy-langent

./: .gitignore  README.md  main.py  pyproject.toml
docs/.vitepress/: config.mts
docs/guide/: chapter1.md  chapter2.md  chapter3.md  chapter4.md  chapter6.md  chapter7.md  chapter9.md  前言.md
project/AgenticRag/: .gitignore  README.md
project/AgenticRag/backend/: requirements.txt
project/AgenticRag/backend/app/: main.py
project/AgenticRag/backend/app/api/: endpoints.py
project/AgenticRag/backend/app/core/: config.py
project/AgenticRag/backend/app/schemas/: api_schemas.py
project/AgenticRag/backend/app/services/: agent_service.py  (+1 more)
project/AgenticRag/frontend/: index.html  package.json  vite.config.ts
project/AgenticRag/frontend/src/: App.tsx  index.css
project/HarbinIceSnowOpinionDecision/: README.md  main.py  requirements.txt
project/HarbinIceSnowOpinionDecision/data/: 2023-2024季_收尾期_情感分析结果.xlsx  2023-2024季_预热期_情感分析结果.xlsx  2023-2024季_高峰期_情感分析结果.xlsx  2024-2025季_收尾期_情感分析结果.xlsx  2024-2025季_预热期_情感分析结果.xlsx  2024-2025季_高峰期_情感分析结果.xlsx
project/MCPChat/: .gitignore  LICENSE  README.md
project/MCPChat/backend/: .env.template  agent.py  history.py  mcp_manager.py  mcp_registry.json  pyproject.toml  server.py  tools.py
project/MCPChat/frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
project/MCPChat/frontend/src/: App.tsx  index.css
project/MedicalRag/: .env.example  README.md  app.py  build_knowledge_base.py  config_manager.py  medical_rag.py  requirements.txt  vector_store_manager.py
src/code/: chapter2.ipynb
tmp/: 第9章大纲.md
(+30 files in other folders)
